// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopicMolecule > 2-chlorobutane 1`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      6,
      7,
      8,
    ],
    "attachedHydrogensIDCodes": [
      "gGPDALzHRVzjbHC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADIMuTe@XbhOtbIpj\`",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      5,
    ],
    "attachedHydrogensIDCodes": [
      "gGPDALjHRZzjdhC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XdhOtbQpj\`",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "Cl",
    "atomMapNo": 0,
    "atomicNo": 17,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@X\`hOtbCpfuP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      9,
      10,
    ],
    "attachedHydrogensIDCodes": [
      "gGPDALfHRYjjThU@_iDBIU@",
      "gGPDALfHRYjjThQ@_iDBIU@",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XbhOtbIpj\`",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      11,
      12,
      13,
    ],
    "attachedHydrogensIDCodes": [
      "gGPDALfHRUjjfHC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XahOtbEpj\`",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "gJPHADILuTe@XdhOtbQpj\`",
    "idCode": "gGPDALjHRZzjdhC}H\`QJh",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
]
`;

exports[`TopicMolecule > check gietDiaIDsObject with atomCustomLabels 1`] = `
{
  "eM@Df\`Xb\`RP\\Jh": {
    "atomLabel": "C",
    "atoms": [
      0,
      2,
    ],
    "attachedHydrogens": [
      3,
      4,
      5,
      8,
      9,
      10,
    ],
    "attachedHydrogensCustomLabels": [
      "H1",
      "H2",
    ],
    "counter": 2,
    "customLabels": [
      "R1",
      "R3",
    ],
    "existingAtoms": [
      0,
      2,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "eM@Df\`Xb\`RP\\Jh",
  },
  "eM@HzAbJC}IApj\`": {
    "atomLabel": "C",
    "atoms": [
      1,
    ],
    "attachedHydrogens": [
      6,
      7,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [
      "R2",
    ],
    "existingAtoms": [
      1,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "eM@HzAbJC}IApj\`",
  },
  "gC\`HALiKT@RHDRj@": {
    "atomLabel": "H",
    "atoms": [
      3,
      4,
      5,
      8,
      9,
      10,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 6,
    "customLabels": [
      "H1",
      "H2",
    ],
    "existingAtoms": [
      2,
      3,
      4,
      5,
    ],
    "heavyAtoms": [
      0,
      2,
    ],
    "heavyAtomsCustomLabels": [
      "R1",
      "R3",
    ],
    "oclID": "gC\`HALiKT@RHDRj@",
  },
  "gC\`HALiMT@RHDRj@": {
    "atomLabel": "H",
    "atoms": [
      6,
      7,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 2,
    "customLabels": [],
    "existingAtoms": [
      6,
      7,
    ],
    "heavyAtoms": [
      1,
    ],
    "heavyAtomsCustomLabels": [
      "R2",
    ],
    "oclID": "gC\`HALiMT@RHDRj@",
  },
}
`;

exports[`TopicMolecule > ethanol 1`] = `
[
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "attachedHydrogens": [
      4,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "attachedHydrogens": [
      3,
      5,
      6,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "attachedHydrogens": [
      7,
      8,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFHhOtdGrj@",
    "idCode": "gCaHHIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
]
`;

exports[`TopicMolecule > ethanol 2`] = `
[
  {
    "atomLabel": "C",
    "atoms": [
      0,
    ],
    "attachedHydrogens": [
      4,
      5,
      6,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      0,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "eMHAIhFIhOtdWBj@",
  },
  {
    "atomLabel": "C",
    "atoms": [
      1,
    ],
    "attachedHydrogens": [
      7,
      8,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      1,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "eMHAIhFJhOtdgBj@",
  },
  {
    "atomLabel": "O",
    "atoms": [
      2,
    ],
    "attachedHydrogens": [
      3,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      2,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "eMHAIhFHhOtdGrj@",
  },
  {
    "atomLabel": "H",
    "atoms": [
      3,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      3,
    ],
    "heavyAtoms": [
      2,
    ],
    "heavyAtomsCustomLabels": [],
    "oclID": "gCaHHIeIZ\`GzQ@bUP",
  },
  {
    "atomLabel": "H",
    "atoms": [
      4,
      5,
      6,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 3,
    "customLabels": [],
    "existingAtoms": [
      4,
      5,
      6,
    ],
    "heavyAtoms": [
      0,
    ],
    "heavyAtomsCustomLabels": [],
    "oclID": "gCaHLIeIZ\`GzQ@bUP",
  },
  {
    "atomLabel": "H",
    "atoms": [
      7,
      8,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 2,
    "customLabels": [],
    "existingAtoms": [
      7,
      8,
    ],
    "heavyAtoms": [
      1,
    ],
    "heavyAtomsCustomLabels": [],
    "oclID": "gCaHDIeIjiJ@RHDRj@",
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 1`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      3,
      4,
      5,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      6,
      7,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogens": [
      8,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 2`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      3,
      4,
      5,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      6,
      7,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogens": [
      8,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 3`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      5,
      6,
      7,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogens": [
      3,
      4,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogens": [
      8,
    ],
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogens": [],
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 4`] = `
[
  [
    "fH@NJ\`uOkoth\\Jh",
    "eF@Hp\\QPZQgr][~d\`xUP",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
  ],
  [
    "fH@NJ\`uOk_th\\Jh",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
  ],
  [
    "fI@GEPZgu_zTOeT",
    "eFHBLGDTFdY|eviHOeT",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp]T~itdDRj@",
    "eMJHfTf\`zYWsN{~d\`bUP",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
  ],
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 5`] = `
[
  [
    "fH@NJ\`uOkoth\\Jh",
    "eF@Hp\\QPZQgr][~d\`xUP",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
  ],
  [
    "fH@NJ\`uOk_th\\Jh",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
  ],
  [
    "fI@GEPZgu_zTOeT",
    "eFHBLGDTFdY|eviHOeT",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp]T~itdDRj@",
    "eMJHfTf\`zYWsN{~d\`bUP",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
  ],
]
`;

exports[`TopicMolecule > ethanol with max sphere size 1`] = `
[
  [
    "fH@NJ\`uOkoth\\Jh",
    "eF@Hp\\QPZQgr][~d\`xUP",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
  ],
  [
    "fH@NJ\`uOk_th\\Jh",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
  ],
  [
    "fI@GEPZgu_zTOeT",
    "eFHBLGDTFdY|eviHOeT",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp]T~itdDRj@",
    "eMJHfTf\`zYWsN{~d\`bUP",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
  ],
]
`;

exports[`TopicMolecule > ethanol with max sphere size 2`] = `
[
  [
    "fH@NJ\`uOkoth\\Jh",
    "eF@Hp\\QPZQgr][~d\`xUP",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
    "eMHAIhNIhMXrolnu{}IEpj\`",
  ],
  [
    "fH@NJ\`uOk_th\\Jh",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
    "eMHAIhNJhMXrolnu{}IIpj\`",
  ],
  [
    "fI@GEPZgu_zTOeT",
    "eFHBLGDTFdY|eviHOeT",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
    "eMHAIhNHhMXrolnu{}IA|j\`",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzmRPQJh",
    "eMBBYRZCie_MkozRBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
    "gCaHLIeIZ\`NmEN_ZZmuiDBIU@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcAuSzkRPQJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
    "gCaHDIeIjiJAuhis{Ru^{}H\`QJh",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp]T~itdDRj@",
    "eMJHfTf\`zYWsN{~d\`bUP",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
    "gCaHHIeIZ\`NmEN_ZNmw_iDBIU@",
  ],
]
`;

exports[`TopicMolecule > tert-butanol 1`] = `
{
  "gGQHHIeIZjhA~dPHeT": {
    "atomLabel": "H",
    "atoms": [
      14,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      4,
    ],
    "heavyAtoms": [
      4,
    ],
    "heavyAtomsCustomLabels": [],
    "oclID": "gGQHHIeIZjhA~dPHeT",
  },
  "gGQHLIeIZjhA~dPHeT": {
    "atomLabel": "H",
    "atoms": [
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 9,
    "customLabels": [],
    "existingAtoms": [
      2,
      3,
      5,
      6,
      7,
    ],
    "heavyAtoms": [
      1,
      2,
      3,
    ],
    "heavyAtomsCustomLabels": [],
    "oclID": "gGQHLIeIZjhA~dPHeT",
  },
  "gJQ@@duU@LPTGzQ@~UP": {
    "atomLabel": "O",
    "atoms": [
      4,
    ],
    "attachedHydrogens": [
      14,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      4,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "gJQ@@duU@LPTGzQ@~UP",
  },
  "gJQ@@duU@LQTGzQDxUP": {
    "atomLabel": "C",
    "atoms": [
      1,
      2,
      3,
    ],
    "attachedHydrogens": [
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
    ],
    "attachedHydrogensCustomLabels": [],
    "counter": 3,
    "customLabels": [],
    "existingAtoms": [
      1,
      2,
      3,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "gJQ@@duU@LQTGzQDxUP",
  },
  "gJQ@@duU@LRTGzQHxUP": {
    "atomLabel": "C",
    "atoms": [
      0,
    ],
    "attachedHydrogens": [],
    "attachedHydrogensCustomLabels": [],
    "counter": 1,
    "customLabels": [],
    "existingAtoms": [
      0,
    ],
    "heavyAtoms": [],
    "heavyAtomsCustomLabels": [],
    "oclID": "gJQ@@duU@LRTGzQHxUP",
  },
}
`;
